wxdk/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wxdk-ingress
  namespace: test
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: daka.sihai.com                           ##虚拟主机名称
    http:
      paths:
      - path: /
        backend:
          serviceName: app-wxdk
          servicePort: 80
